Added various fixes from J25Camp

--- a/src/templates/joomladach2023/assets/scss/components/_button.scss
+++ b/src/templates/joomladach2023/assets/scss/components/_button.scss
@@ -51,6 +51,9 @@
     --hovercolor: #fff;
     --bordercolor: var(--jdach-lightblue);
     --borderhovercolor: var(--jdach-darkblue);
+    .bg-darkblue & {
+      --borderhovercolor: #fff;
+    }
   }
   .btn--darkblue,
   .btn--secondary,
