--- a/src/templates/joomladach2023/assets/scss/components/_jdachhero.scss
+++ b/src/templates/joomladach2023/assets/scss/components/_jdachhero.scss
@@ -17,6 +17,14 @@
     }
     h1 {
       color: var(--sectioncolor);
+
+      > span {
+        display: block;
+      }
+
+      .jdachhero__subtitle {
+        font-size: .8em;
+      }
     }
     &.bg-darkblue {
       --sectioncolor: var(--jdach-lightblue)
