--- a/src/templates/joomladach2023/assets/scss/screen.scss
+++ b/src/templates/joomladach2023/assets/scss/screen.scss
@@ -33,6 +33,7 @@
 @import 'components/tags';
 @import 'components/article-info';
 @import 'components/figure';
+@import 'components/breadcrumbs';
 
 @import 'views/com-content-article';
 @import 'views/com-content-category-blog';
